# mobiledevice

./: .gitignore  .replit  Pasted--extends-base-html-block-content-div-class-container-h1-class-mt-4-Technica-1734086140595.txt  Phone Management System PRD.docx  Program.cs  app.py  config.py  forms.py  main.py  models.py  pyproject.toml  replit.nix  routes.py  schema.sql  schema_proposal.md  swagger.py  utils.py
Data/: ApplicationDbContext.cs
Models/: Device.cs
routes/: devices.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/devices/: detail.html  edit.html  employee_edit.html  employee_new.html  inventory.html  list.html
templates/documentation/: technical.html
templates/errors/: 404.html  500.html
templates/protocols/: handover.html
